# trade-testing

./: .env og  .gitattributes  .gitignore  .secrets.baseline  AGENT-SYNC.md  API_SOURCES.md  README.md  env.example  pyproject.toml  thresholds.md
.circleci/: config.yml
.github/workflows/: ai-recommendations-swing.yml  ai-recommendations.yml  ci.yml  ml-signals.yml  pr-review.yml
agent/: canonical_decision.py  execute_ai_trades.py  execute_ml_trades.py  instrument_policy.py  market_date.py  portfolio_db.py  recommendation_bucket.py  refresh_stale_recommendations.py  requirements.txt  trade_lessons.py  trading_constraints.py  write_recommendation_cache.py
agent-swing/: canonical_decision.py  db_url.py  execute_ai_trades.py  execute_ml_trades.py  instrument_policy.py  market_price.py  portfolio_db.py  recommendation_bucket.py  refresh_stale_recommendations.py  requirements.txt  run_propagate.py  trade_lessons.py  trading_constraints.py  write_recommendation_cache.py  write_reflection_memory.py
agent-swing/backtest/: __init__.py  config.py  data_loader.py  db_store.py  equity_cache.py  equity_comparison.py  factors.py  grid_search.py  mass_validation.py  ml_desk_store.py  ml_predict.py  ml_runner.py  ml_score.py  ml_validation.py  param_grids.py  price_history.py  results_ranker.py  runner.py  signal_builder.py  sync_prices.py  universe_cache.py
agent-swing/backtest/strategies/: ai_agent.py  base.py  bollinger.py  buy_hold.py  composite.py  ensemble.py  keltner.py  macd.py  ml_forecast.py  prophet_forecast.py  rsi.py  sma_crossover.py
agent-swing/scripts/: test_reddit_cron_local.py
agent-swing/tests/: test_ai_agent_signals.py  test_backtest.py  test_canonical_decision.py  test_claude_skills_pack.py  test_confidence_extraction.py  test_decision_context.py  test_execute_ai_trades.py  test_reddit.py  test_report_builder.py  test_swing_policy.py  test_trading_graph.py  test_write_recommendation_cache.py
agent-swing/tradingagents/: default_config.py
agent-swing/tradingagents/dataflows/: alpha_vantage.py  alpha_vantage_fundamentals.py  config.py  fetch_cache.py  interface.py  (+3 more)
agent/scripts/: test_reddit_cron_local.py
agent/tradingagents/: default_config.py
scripts/: install-deps.sh  market-date.sh  run-batch.sh  run-execute.sh  run-price-refresh.sh  run-reflect.sh  trigger-pipeline.example.sh  verify-llm.sh  verify-secrets.sh
tests/: test_canonical_decision.py  test_confidence_buy_sizing.py  test_errors.py  test_execute_ai_trades.py  test_instrument_policy.py  test_market_data_validator.py  test_portfolio_db.py  test_strategy_checks.py  test_symbol_utils.py  test_trade_lessons.py  test_write_recommendation_cache.py
(+80 files in other folders)
